--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -15,4 +15,8 @@ encoding//src/main/java/com/test/lesson01/UrlMappingQuiz02.java=UTF-8
 encoding//src/main/java/com/test/lesson01/UrlMappingQuiz03.java=UTF-8
 encoding//src/main/java/com/test/lesson01/UrlMappingQuiz04.java=UTF-8
 encoding//src/main/java/com/test/lesson04/Lesson04Ex01.java=UTF-8
+encoding//src/main/java/com/test/lesson04/Lesson04Ex02_delete.java=UTF-8
+encoding//src/main/java/com/test/lesson04/Lesson04Ex02_insert.java=UTF-8
 encoding//src/main/java/com/test/lesson04/Lesson04Quiz01.java=UTF-8
+encoding//src/main/java/com/test/lesson04/Lesson04Quiz02_delete.java=UTF-8
+encoding//src/main/java/com/test/lesson04/Lesson04Quiz02_insert.java=UTF-8
